tests/parser/errors/invalid_import.rv
use math as 1
use math.geom{ Vec2 } as g
use math{Vec2 
